# hyperformula-rust

./: Cargo.toml
crates/hyperformula-rust/: IMPLEMENTATION_SUMMARY.md  PLAN.md  README.md
crates/hyperformula-rust/hyperformula-cli/: Cargo.toml
crates/hyperformula-rust/hyperformula-cli/src/: main.rs
crates/hyperformula-rust/hyperformula-codegen/: Cargo.toml  IMPROVEMENTS.md  README.md
crates/hyperformula-rust/hyperformula-codegen/src/: generator.rs  main.rs  scraper.rs  spec.rs
crates/hyperformula-rust/hyperformula-core/: Cargo.toml
crates/hyperformula-rust/hyperformula-core/src/: coercion.rs  error.rs  evaluator.rs  function.rs  lib.rs  value.rs
crates/hyperformula-rust/hyperformula-funcs/: Cargo.toml
crates/hyperformula-rust/hyperformula-funcs/src/: function.rs  generated.rs  handwritten.rs  lib.rs  logical.rs  math.rs  registry.rs
crates/hyperformula-rust/hyperformula-tests/: Cargo.toml
crates/hyperformula-rust/hyperformula-tests/src/: generated_tests.rs  handwritten_tests.rs  lib.rs
crates/hyperformula-rust/hyperformula-tests/tests/: average_tests.rs  if_tests.rs  integration_tests.rs  sum_tests.rs
